--- a/Xbindings.MapboxLocationLayer.Droid/packages.config
+++ b/Xbindings.MapboxLocationLayer.Droid/packages.config
@@ -2,12 +2,18 @@
 <packages>
   <package id="GoogleGson" version="2.8.0" targetFramework="monoandroid81" />
   <package id="Naxam.Jakewharton.Timber" version="4.5.1" targetFramework="monoandroid81" />
-  <package id="Naxam.Mapbox.Droid" version="5.5.0" targetFramework="monoandroid81" />
+  <package id="Naxam.Mapbox.Droid" version="5.5.1" targetFramework="monoandroid81" />
   <package id="Naxam.Mapbox.MapboxJavaCore" version="2.2.10" targetFramework="monoandroid81" />
   <package id="Naxam.Mapbox.MapboxJavaGeojson" version="2.2.10" targetFramework="monoandroid81" />
   <package id="Naxam.Mapbox.Services.Android.Telemetry" version="2.2.10" targetFramework="monoandroid81" />
+  <package id="Naxam.Mapbox.Services.Droid" version="2.2.9.1" targetFramework="monoandroid81" />
+  <package id="Naxam.Mapzen.Lost.Droid" version="3.0.4" targetFramework="monoandroid81" />
+  <package id="Naxam.Retrofit2.ConvertGson.Droid" version="2.2.0" targetFramework="monoandroid81" />
+  <package id="Naxam.SquareUp.OkHttp3" version="3.6.0" targetFramework="monoandroid81" />
+  <package id="Naxam.SquareUp.OkHttp3.LoggingInterceptor" version="3.6.0" targetFramework="monoandroid81" />
   <package id="Square.OkHttp3" version="3.8.1" targetFramework="monoandroid81" />
   <package id="Square.OkIO" version="1.13.0" targetFramework="monoandroid81" />
+  <package id="Square.Retrofit2" version="2.2.0" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Arch.Core.Common" version="1.0.0" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Arch.Lifecycle.Common" version="1.0.3" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Arch.Lifecycle.Runtime" version="1.0.3" targetFramework="monoandroid81" />
@@ -20,4 +26,9 @@
   <package id="Xamarin.Android.Support.Media.Compat" version="27.0.2" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.v7.AppCompat" version="27.0.2" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Build.Download" version="0.4.9" targetFramework="monoandroid81" />
+  <package id="Xamarin.GooglePlayServices.Base" version="60.1142.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.GooglePlayServices.Basement" version="60.1142.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.GooglePlayServices.Location" version="60.1142.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.GooglePlayServices.Tasks" version="60.1142.1" targetFramework="monoandroid81" />
 </packages>
