--- a/lib.nuspec
+++ b/lib.nuspec
@@ -19,6 +19,9 @@
             <dependency id="Naxam.Jakewharton.Timber" version="4.5.1" />
             <dependency id="Naxam.Mapbox.Droid" version="5.5.1" />
             <dependency id="Xamarin.Android.Support.Compat" version="27.0.2" />
+            <dependency id="Naxam.Mapbox.Services.Droid" version="2.2.9.1" />
+            <dependency id="Xamarin.GooglePlayServices.Location" version="60.1142.1" />
+            <dependency id="Naxam.Mapzen.Lost.Droid" version="3.0.4" />
         </dependencies>
     </metadata>
     <files>
