--- a/lib.nuspec
+++ b/lib.nuspec
@@ -3,7 +3,7 @@
     <metadata>
         <!-- Required elements-->
         <id>Xbindings.MapboxLocationLayer.Droid</id>
-        <version>0.8.0</version>
+        <version>0.8.0.1</version>
         <authors>NAXAM</authors>
         <owners>NAXAM COMPANY LIMITED</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -19,6 +19,7 @@
             <dependency id="Naxam.Jakewharton.Timber" version="4.5.1" />
             <dependency id="Naxam.Mapbox.Droid" version="6.4.0.1" />
             <dependency id="Xamarin.Android.Support.Compat" version="27.0.2.1" />
+            <dependency id="Xamarin.GooglePlayServices.Location" version="60.1142.1" />
         </dependencies>
     </metadata>
     <files>
